# u2dm-client

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  build.rs  justfile  rustfmt.toml
assets/demo/: data.json
lang/: it.po  u2dm.pot  utdm.pot
scripts/: gen-demo-assets.sh  gen-screenshot.sh
src/: app.rs  commands.rs  composition.rs  config.rs  emoji.rs  error.rs  main.rs  util.rs
src/adapters/: browser.rs  matrix.rs  media.rs  mod.rs  storage.rs  ui.rs
src/adapters/demo/: data.rs  dto.rs  matrix.rs  media.rs  mod.rs  storage.rs
src/adapters/matrix/: auth.rs  media.rs  mod.rs  preview.rs  profile.rs  rooms.rs  timeline.rs  verification.rs
src/adapters/matrix/media/: cache.rs  mod.rs  service.rs
src/adapters/matrix/timeline/: convert.rs  diff.rs  filter.rs  mod.rs  subscribe.rs
src/adapters/ui/: backend.rs  common.rs  compiled.rs  decode.rs  dto.rs  interpreted.rs  mod.rs  multiplex.rs  output.rs  present.rs  props.rs  reconcile.rs  reduce.rs  router.rs  schema.rs
src/app/: active_timeline.rs  lifecycle.rs  media.rs  mod.rs  room_directory.rs  selection.rs  session.rs  task_group.rs  verification.rs
src/domain/: mod.rs  models.rs  viewport.rs
src/ports/: browser.rs  matrix.rs  media.rs  mod.rs  output.rs  storage.rs
ui/: enums.slint  main.slint  theme.slint  views.slint
ui/components/: a11y.slint  avatar.slint  types.slint  verification.slint
ui/screens/: loading.slint
ui/screens/chat/: chat.slint
ui/screens/chat/components/: drawer.slint  message-preview.slint  reply-quote.slint  sidebar.slint  space-rail.slint  subspace-rail.slint  tile.slint  timeline.slint  types.slint
ui/screens/chat/components/messages/: file-message.slint  image-message.slint  text-message.slint  unsupported-message.slint  utd-message.slint
ui/screens/chat/components/timeline/: emoji-picker.slint  message-bubble.slint  message-input.slint  status-pill.slint  timeline-content.slint  timeline-view.slint
ui/screens/chat/components/timeline/messages/: file-message.slint  image-message.slint  service-message.slint  text-message.slint  unsupported-message.slint  utd-message.slint
ui/screens/credentials/: credentials.slint
ui/screens/homeserver/: homeserver.slint
ui/screens/login/: common.slint  credentials.slint  homeserver.slint  loading.slint  types.slint
