[package]
name = "U2DM"
version = "0.1.0"
edition = "2024"
description = "Unable to decrypt message. A Matrix chat client using Slint and matrix-sdk"
license = "AGPL-3.0-or-later"
#repository = ""
readme = "README.md"
keywords = ["matrix", "chat", "slint"]
categories = ["network-programming"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6"
futures-util = "0.3.32"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "apple-native", "windows-native"] }
matrix-sdk = { version = "0.16", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "rustls-tls",
    "local-server",
] }
matrix-sdk-ui = { version = "0.16", default-features = false }
open = "5"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-skia",
    "accessibility",
] }
slint-interpreter = { version = "1.15.1", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-skia",
    "accessibility",
] }
thiserror = "2"
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
#cargo = { level = "deny", priority = -1 }
disallowed_types = "deny"
disallowed_methods = "deny"
pub_use = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
panic = "deny"
indexing_slicing = "deny"
exit = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"
vec_box = "deny"
large_enum_variant = "deny"
await_holding_lock = "deny"
future_not_send = "deny"
cognitive_complexity = "deny"
needless_collect = "deny"
let_underscore_must_use = "deny"
absolute_paths = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
