[package]
name = "u2dm"
version = "0.1.0"
edition = "2024"
description = "Unable to decrypt message. A Matrix chat client built with Slint UI"
license = "AGPL-3.0-or-later"
#repository = ""
readme = "README.md"
keywords = ["matrix", "chat", "slint"]
categories = ["network-programming"]

[features]
default = []
interpreted = ["dep:slint-interpreter", "dep:lucide-slint"]
demo = []

[dependencies]
async-trait = "0.1.91"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
directories = "6"
emojis = "0.9.0"
futures-util = "0.3.33"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
    "tiff",
] }
infer = "0.22.0"
keyring-core = "1"
lucide-slint = { version = "1.25.0", optional = true }
matrix-sdk = { version = "0.18.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "local-server",
] }
matrix-sdk-base = { version = "0.18.0", default-features = false }
matrix-sdk-ui = { version = "0.18.0", default-features = false }
open = "5.4.0"
rand = "0.10.2"
rfd = "0.17.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
slint = { version = "1.17.1", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
    "accessibility",
    "gettext",
] }
slint-interpreter = { version = "1.17.1", optional = true, default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
    "accessibility",
] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = [
    "crypto-rust",
] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1"

[build-dependencies]
lucide-slint = "1.24.0"
slint-build = "1.17.1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
#cargo = { level = "deny", priority = -1 }
disallowed_types = "deny"
disallowed_methods = "deny"
pub_use = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
panic = "deny"
indexing_slicing = "deny"
exit = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"
vec_box = "deny"
large_enum_variant = "deny"
await_holding_lock = "deny"
future_not_send = "deny"
cognitive_complexity = "deny"
needless_collect = "deny"
let_underscore_must_use = "deny"
absolute_paths = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"


[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.inspect]
inherits = "dev"
incremental = false

[profile.inspect.package."*"]
opt-level = 3
debug = false
